# cobbles

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  cobbles_binding.js  example_heaps.html  example_heaps.hxml  extraParams.hxml  haxelib.json  libs.hxml  test.html  test.hxml
.github/workflows/: ci.yml  get_cobbletext.sh  get_hashlink.sh  get_hashlink_bin.sh  run_test_hl.sh  run_test_hlc.sh
example/heaps/: README.md
example/heaps/src/cobbles/example/heaps/: DemoText.hx  HeapsExample.hx  TextLayout.hx
hxml/: docs-gen.hxml  docs-xml.hxml  docs.hxml  example_heaps.hl.hxml  example_heaps.js.hxml  test.cpp.hxml  test.hl.hxml  test.hlc.hxml  test.js.hxml
native/: CMakeLists.txt  Makefile  cobbles.c  cobbles.h  cobbles_font.c  cobbles_hl.c  cobbles_hl.h  cobbles_shaper.c  hxcpp_build.xml  hxcpp_config.xml
script/: minify_HeapsExample.sh  zip_release.py
src/cobbles/: AdvanceInfo.hx  Alignment.hx  Cobbles.hx  Debug.hx  Direction.hx  Disposable.hx  Engine.hx  Exception.hx  FontID.hx  FontInfo.hx  GlyphID.hx  GlyphInfo.hx  InlineObject.hx  LayoutFacade.hx  Library.hx  MacroUtil.hx  Orientation.hx  OutputInfo.hx  Runtime.hx  ScriptDirection.hx  TextAlignment.hx  TextConfig.hx  TextInput.hx  TileInfo.hx
src/cobbles/algorithm/: BidiAlgorithm.hx  CharTools.hx  LineBreakingAlgorithm.hx  ScriptGuesser.hx  SimpleLineBreaker.hx
src/cobbles/core/: AdvanceInfo.hx  CustomPropertyID.hx  Engine.hx  EngineCPP.hx  EngineHL.hx  EngineJS.hx  InlineObjectID.hx  Library.hx  LibraryCPP.hx  LibraryHL.hx  LibraryJS.hx
src/cobbles/ds/: Cache.hx  FNV1aHasher.hx  Hasher.hx  Int64Map.hx  MapTools.hx
src/cobbles/font/: Font.hx  FontTable.hx  GlyphBitmap.hx  GlyphInfo.hx
src/cobbles/layout/: InlineObject.hx  Layout.hx  LayoutLine.hx  LayoutLineBreaker.hx  PenRun.hx  ShapedItem.hx  TextProperties.hx  TextSource.hx
src/cobbles/markup/: BRHandler.hx  ElementHandler.hx  MarkupException.hx  MarkupObject.hx  MarkupParser.hx  ObjectHandler.hx  ParseUtil.hx  ScriptAutoHandler.hx  ScriptDirectionHandler.hx  SpanHandler.hx  StandardTextNodeHandler.hx  TextContext.hx  TextNodeHandler.hx
src/cobbles/native/: AdvanceInfo.hx  AdvanceType.hx  BytesTools.hx  CPPUtil.hx  CobblesExtern.hx  EmModule.hx  EmbindVector.hx  Engine.hx  EngineHandle.hx  EngineProperties.hx  FontInfo.hx  GlyphInfo.hx  HxcppConfig.hx  Library.hx  LibraryHandle.hx  NativeData.hx  OutputInfo.hx  ScriptDirection.hx  TextAlignment.hx  TextProperties.hx  TileInfo.hx
src/cobbles/render/: BaseBitmap.hx  BaseRenderer.hx  Bitmap.hx  BitmapRenderer.hx  GlyphBitmapCache.hx  GlyphCache.hx  GlyphInfoCache.hx  GlyphMap.hx  GlyphRenderKey.hx  GrayscaleBitmap.hx  GreyscaleBitmap.hx  GreyscaleBitmapRenderer.hx
src/cobbles/render/heaps/: PixelsBitmap.hx  TextureAtlas.hx  TileGroupRenderer.hx
src/cobbles/shaping/: GlyphShape.hx  ShapeCache.hx  Shaper.hx
src/cobbles/util/: ArrayTools.hx  MoreUnicodeTools.hx  UnicodeUtil.hx
test/: CMakeLists.txt
test/cobbles/: BaseTestCase.hx  TestAll.hx
test/cobbles/test/: TestBitmapRender.hx  TestEngine.hx  TestFont.hx  TestFontTable.hx  TestLayout.hx  TestMarkup.hx  TestShaper.hx  TestTextInput.hx  TestTextSource.hx  TestUnicodeUtil.hx
test/cobbles/test/algorithm/: TestScriptGuesser.hx  TestSimpleLineBreaker.hx
test/cobbles/test/font/: TestFont.hx  TestFontTable.hx
test/cobbles/test/layout/: TestLayout.hx  TestTextSource.hx
test/cobbles/test/markup/: TestMarkup.hx
test/cobbles/test/render/: TestBitmapRender.hx
test/cobbles/test/shaping/: TestShaper.hx
test/cobbles/test/util/: TestUnicodeUtil.hx
